[package]
name = "kuppalista"
version = "1.0.0-rc"
authors = ["def <def@huumeet.info>"]
description = "Real-time shopping list"

[dependencies]
bytes = "0.4"
fs2 = "0.4"
futures = "0.1"
httparse = "1.3"
hyper = "0.12"
memmap = "0.7"
native-tls = "0.2"
rpassword = "2.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.2"
tokio-tungstenite = "0.6"
tungstenite = "0.6"

[patch.crates-io]
tungstenite = { git = 'https://github.com/snapview/tungstenite-rs', rev = 'c33f4f3895ccedf1f370b8b675bf980257f6c3f4' }

[features]
default = ["verbose"]
verbose = []
