[package]
name = "kuppalista"
version = "1.1.0-rc2"
authors = ["def <def@huumeet.info>"]
description = "Real-time shopping list"

[dependencies]
bytes = "0.4"
clap = "2.33"
fs2 = "0.4"
futures = "0.1"
httparse = "1.3"
hyper = "0.12"
memmap = "0.7"
native-tls = "0.2"
rpassword = "4.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.2"
tokio-tungstenite = "0.9"
tungstenite = "0.9"

[features]
default = ["verbose"]
verbose = []
